@@ -141,6 +141,10 @@ HTML_TO_PLAIN_TEXT_COMMAND = '/usr/bin/lynx -dump %(filename)s'
 # character that doesn't match this class.
 ACCEPTABLE_LISTNAME_CHARACTERS = '[-+_.=a-z0-9]'
 
+# Shall the user's real names be displayed along with their email addresses
+# in list rosters?  Defaults to No to preserve prior behavior.
+ROSTER_DISPLAY_REALNAME = No
+
 
 
 #####
